[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.3", features = ["csr", "nightly"] }
gloo-timers = { version = "0.2", features = ["futures"] }
leptos_meta = "0.4.3"
[dependencies.uuid]
version = "1.4.0"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"js",
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
